--- a/new.html
+++ b/new.html
@@ -16,7 +16,9 @@
     <h1>Fifth Repository</h1>
     <img src="/my-second-repo/image.jpg" alt="Picture" width="300" height="200">
     <p>I am coding again, again and again</p>
-
+    <p>I am coding again, again and again</p>
+    <p>I am coding again, again and again</p>
+    <h2>New heading 2</h2>
 </body>
 
 </html>
