--- a/new.html
+++ b/new.html
@@ -20,6 +20,7 @@
     <p>I am coding again, again and again</p>
     <h2>New heading 2</h2>
     <h4>background color new</h4>
+    <img src="/my-second-repo/image.jpg" alt="Picture" width="300" height="200">
 </body>
 
 </html>
