--- a/new.html
+++ b/new.html
@@ -14,13 +14,19 @@
 
 <body>
     <h1>Fifth Repository</h1>
-    <img src="/my-second-repo/image.jpg" alt="Picture" width="300" height="200">
+    <img src="/my-second-repo/image.jpg" alt="Picture">
     <p>I am coding again, again and again</p>
     <p>I am coding again, again and again</p>
     <p>I am coding again, again and again</p>
     <h2>New heading 2</h2>
     <h4>background color new</h4>
-    <img src="/my-second-repo/image.jpg" alt="Picture" width="300" height="200">
+    <img src="/my-second-repo/image.jpg" alt="Picture">
+    <img src="GitHub Command & Merge.jpg" alt="GitHub Command">
+    <img src="add_branch1.jpg" alt="Add Branch 1">
+    <img src="add_branch2.jpg" alt="Add Branch 2">
+    <img src="add_branch3.jpg" alt="Add Branch 3">
+    <img src="add_branch4.jpg" alt="Add Branch 4">
+    <img src="add_branch5.jpg" alt="Add Branch 5">
 </body>
 
 </html>
