--- a/new.html
+++ b/new.html
@@ -27,6 +27,12 @@
     <img src="add_branch3.jpg" alt="Add Branch 3">
     <img src="add_branch4.jpg" alt="Add Branch 4">
     <img src="add_branch5.jpg" alt="Add Branch 5">
+    <div>
+        <h1>Look mama, I can write block.</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut labore, ut unde, rem expedita quae
+            dignissimos non nam optio enim earum, voluptates vitae magnam culpa ipsam sequi maxime. Aspernatur.
+        </p>
+    </div>
 </body>
 
 </html>
